# miscellaneous

porting_mx10/devicetree/: rk3328-box-mx10.dts  rk3328_tmp.dtsi
si321x_userspace/: configure  configure.ac  readme.md
si321x_userspace/src/: Makefile.am  Makefile.in  si3210.c  si3210.h  si3210_spi.c
si321x_userspace/src/.deps/: si3210.Po  si3210_spi.Po
slic_manager/src/: si3210.c  si3210.h  si3210_spi.c  slic_manager
